match3/src/snapshots/match3__tests__common__combine_neighbours.txt.snap
---
source: match3/src/tests.rs
expression: "variants[0].1"
---
Should combine neighboring groups when merge_neighbours=true
Board: 
╭─────╮
│rrr--│
│--rrr│
╰─────╯
Match #0 - r:
╭─────╮
│rrr  │
│  rrr│
╰─────╯
Remaining cells:
╭─────╮
│   --│
│--   │
╰─────╯
