match3/src/snapshots/match3__tests__common__different_types.txt.snap
---
source: match3/src/tests.rs
expression: "variants[0].1"
---
Should not mix different types
Board: 
╭────╮
│rrgg│
╰────╯
No matches
