match3/src/snapshots/match3__tests__common__dont_combine_neighbours.txt.snap
---
source: match3/src/tests.rs
expression: "variants[0].1"
---
Should not combine neighboring groups when merge_neighbours=false
Board: 
╭─────╮
│rrr--│
│--rrr│
╰─────╯
Match #0 - r:
╭─────╮
│rrr  │
│     │
╰─────╯
Match #1 - r:
╭─────╮
│     │
│  rrr│
╰─────╯
Remaining cells:
╭─────╮
│   --│
│--   │
╰─────╯
