match3/src/snapshots/match3__tests__common__empty_board.txt.snap
---
source: match3/src/tests.rs
expression: "variants[0].1"
---
Should not match an empty board
Board: 
╭─────╮
│-----│
│-----│
│-----│
│-----│
│-----│
╰─────╯
No matches
