match3/src/snapshots/match3__tests__common__horizontal_line.txt.snap
---
source: match3/src/tests.rs
expression: "variants[0].1"
---
Should match horizontal line
Board: 
╭───╮
│rrr│
╰───╯
Match #0:
╭───╮
│rrr│
╰───╯
Remaining cells:
╭───╮
│   │
╰───╯
