match3/src/snapshots/match3__tests__common__incomplete_horizontal_line.txt.snap
---
source: match3/src/tests.rs
expression: "variants[0].1"
---
Should not match incomplete horizontal line
Board: 
╭───╮
│rr-│
╰───╯
No matches
