match3/src/snapshots/match3__tests__common__incomplete_vertical_line.txt.snap
---
source: match3/src/tests.rs
expression: "variants[0].1"
---
Should not incomplete vertical line
Board: 
╭─╮
│r│
│r│
│-│
╰─╯
No matches
