match3/src/snapshots/match3__tests__common__intersecting_groups.txt.snap
---
source: match3/src/tests.rs
expression: "variants[0].1"
---
Should combine intersecting groups
Board: 
╭─────╮
│-r-r-│
│rrrrr│
│-r-r-│
│rrrrr│
│-r-r-│
╰─────╯
Match #0:
╭─────╮
│ r r │
│rrrrr│
│ r r │
│rrrrr│
│ r r │
╰─────╯
Remaining cells:
╭─────╮
│- - -│
│     │
│- - -│
│     │
│- - -│
╰─────╯
