match3/src/snapshots/match3__tests__common__middle_of_a_line.txt.snap
---
source: match3/src/tests.rs
expression: "variants[0].1"
---
Should match groups in a middle of a line
Board: 
╭─────╮
│grrrb│
╰─────╯
Match #0 - r:
╭─────╮
│ rrr │
╰─────╯
Remaining cells:
╭─────╮
│g   b│
╰─────╯
