match3/src/snapshots/match3__tests__common__separate_groups.txt.snap
---
source: match3/src/tests.rs
expression: "variants[0].1"
---
Should match groups in a middle of a line
Board: 
╭─────╮
│yrrrw│
│ygggw│
│ybbbw│
╰─────╯
Match #0:
╭─────╮
│y    │
│y    │
│y    │
╰─────╯
Match #1:
╭─────╮
│ rrr │
│     │
│     │
╰─────╯
Match #2:
╭─────╮
│    w│
│    w│
│    w│
╰─────╯
Match #3:
╭─────╮
│     │
│ ggg │
│     │
╰─────╯
Match #4:
╭─────╮
│     │
│     │
│ bbb │
╰─────╯
Remaining cells:
╭─────╮
│     │
│     │
│     │
╰─────╯
