match3/src/snapshots/match3__tests__common__valid_h_invalid_v.txt.snap
---
source: match3/src/tests.rs
expression: "variants[0].1"
---
Should match valid horizontal while not matching invalid vertical
Board: 
╭───╮
│rrr│
│r--│
│---│
╰───╯
Match #0 - r:
╭───╮
│rrr│
│   │
│   │
╰───╯
Remaining cells:
╭───╮
│   │
│r--│
│---│
╰───╯
