match3/src/snapshots/match3__tests__common__valid_v_invalid_h.txt.snap
---
source: match3/src/tests.rs
expression: "variants[0].1"
---
Should match valid vertical while not matching invalid horizontal
Board: 
╭───╮
│rr-│
│r--│
│r--│
╰───╯
Match #0:
╭───╮
│r  │
│r  │
│r  │
╰───╯
Remaining cells:
╭───╮
│ r-│
│ --│
│ --│
╰───╯
